dded time out system for TLS connections that suddenly drop and started playing around with game packets

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,11 @@
 *.pro.user
 *.pro.user.*
 *.o
-
+Libs
+release
+debug
+.vs
+*.sln
+*.vcxproj
+*.GateServer.vcxproj.filters
+*.GateServer.vcxproj.user
